--- a/.github/workflows/ping-health.yml
+++ b/.github/workflows/ping-health.yml
@@ -1,14 +1,14 @@
-name: Ping Render Health Route
+# name: Ping Render Health Route
 
-on:
-  schedule:
-    - cron: "*/12 * * * *" # Every 12 minutes
-  workflow_dispatch: # Allow manual trigger if needed
+# on:
+#   schedule:
+#     - cron: "*/12 * * * *" # Every 12 minutes
+#   workflow_dispatch: # Allow manual trigger if needed
 
-jobs:
-  ping:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Send HEAD request to /health
-        run: |
-          curl -I -s -o /dev/null -w "%{http_code}\n" https://image-service-7t4w.onrender.com/health
+# jobs:
+#   ping:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Send HEAD request to /health
+#         run: |
+#           curl -I -s -o /dev/null -w "%{http_code}\n" https://image-service-7t4w.onrender.com/health
